--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,13 @@ authors = ["Luciano Borba <luhborbafilho@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.12.1"
 mkdocs = "^1.5.3"
 black = "^24.2.0"
 duckdb = "^0.10.0"
 taskipy = "^1.12.2"
+python-dotenv = "^1.0.1"
+kaggle = "^1.6.6"
 
 
 [build-system]
