--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,9 +15,16 @@ python-dotenv = "^1.0.1"
 kaggle = "^1.6.6"
 pytest = "^8.0.2"
 loguru = "^0.7.2"
-pandas = "^2.2.1"
+isort = "^5.13.2"
+mkdocs-material = "^9.5.12"
+mkdocstrings-python = "^1.8.0"
 
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.taskipy.tasks]
+format = "black . && isort ."
+test = "pytest -v"
+run = "python main.py"
