--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ mkdocstrings = "^0.24.1"
 taskipy = "^1.12.2"
 pydocstyle = "^6.3.0"
 pip-audit = "^2.7.2"
+pre-commit = "^3.6.2"
 
 
 [build-system]
